# ZoneBRace

SensorFinish/: platformio.ini
SensorFinish/lib/Ultrsonic/: Ultrasonic.cpp  Ultrasonic.h
SensorFinish/src/: main.cpp
SensorStart/: platformio.ini
SensorStart/lib/Ultrsonic/: Ultrasonic.cpp
SensorStart/lib/wifiSetup/: WiFiSetup.cpp  WifiSetup.h
SensorStart/src/: main.cpp
backend/: .gitignore  Cargo.toml  Shuttle.toml  build.rs  schema.sql  tailwind.config.js
backend/src/: main.rs
backend/src/auth/: auth.rs  user.rs
backend/src/config/: devices.rs  mod.rs  trails.rs
backend/src/data/: data.rs  mod.rs  que.rs  scoreboard.rs
backend/static/: jwt.js  style.css
backend/templates/: index.html  link_list.html
backend/templates/config/: devices.html  trails.html
backend/templates/data/: que.html  scoreboard.html  table.html
backend/templates/user/: login.html  not_loged_in.html  register.html  user.html
backend/test/: test.py
